--- a/download.html
+++ b/download.html
@@ -3,9 +3,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <base target="_top">
-
     <title>Tangle: Download</title>
+
 	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="Fonts/Insolent/stylesheet.css" type="text/css">
     <link rel="stylesheet" href="Fonts/BorisBlackBloxx/stylesheet.css" type="text/css">
     <link rel="stylesheet" href="style.css" type="text/css">
 
@@ -24,9 +25,9 @@
 <h3>explorable explanations made easy</h3>
 
 <div class="menu">
-    <a href="guide.html">Getting Started</a> &nbsp; &nbsp; &nbsp;
-    <a href="reference.html">API Reference</a> &nbsp; &nbsp; &nbsp;
-    <a href="download.html">Download</a> &nbsp; &nbsp; &nbsp;
+    <a href="guide.html">Getting Started</a> &nbsp; &nbsp;
+    <a href="reference.html">API Reference</a> &nbsp; &nbsp;
+    <a href="download.html">Download</a> &nbsp; &nbsp;
     <a href="https://groups.google.com/group/tangle-talk">Discuss</a>
 </div>
 
@@ -54,9 +55,9 @@
 
 <p><b><a href="TangleKit/">TangleKit</a></b> is an optional collection of UI components that let your readers adjust values and visualize the results.  You can grab whichever components you want, use them, extend them, modify them, or just learn from them and make your own.  TangleKit also includes (and depends on) a few helpful libraries, such as <a href="http://mootools.net/">MooTools</a>, <a href="http://www.diveintojavascript.com/projects/javascript-sprintf">sprintf</a>, and BVTouchable.</p>
 
-<p><b><a href="template.html">Tangle Template</a></b> is a simple sample document that you can start from, to get tangling right away.</p>
+<p><b><a href="TangleTemplate.html">Tangle Template</a></b> is a simple sample document that you can start from, to get tangling right away.</p>
 
-<h2>How You Can Help</h2>
+<h2>Get Involved</h2>
 
 <p>This is an <b>alpha</b> release.  That means that the API is subject to change, and such changes may break your code.  TangleKit is currently a hodge-podge, and almost certainly will change.</p>
 
@@ -64,11 +65,13 @@
 
 <ul style="margin-left:20px; list-style-type:disc;">
 <li>Join the <a href="https://groups.google.com/group/tangle-talk">Tangle Talk</a> discussion group.</li>
-<li>Let us know if the API makes it difficult to do something you want to do.</li>
 <li>Contribute Tangle classes and formats for possible inclusion with TangleKit.</li>
 <li>Contribute documents you've made for possible inclusion in the examples.</li>
+<li>Let us know if the API makes it difficult to make something you want to make.</li>
+<li>Complain about confusing documentation.</li>
 <li>Report bugs.</li>
-<li>Tell your friends!</li>
+<li>Tell your friends.</li>
+<li>Get these kids off my lawn. Also, I don't anything about the WordPress or the Tumblr or however kids these days are writing on the web. Can Tangle go where they go?</li>
 </ul>
 
 
@@ -86,9 +89,9 @@
 <div class="author">by <a href="http://worrydream.com/">Bret Victor</a></div>
 
 <div class="menu">
-    <a href="guide.html">Getting Started</a> &nbsp; &nbsp; &nbsp;
-    <a href="reference.html">API Reference</a> &nbsp; &nbsp; &nbsp;
-    <a href="download.html">Download</a> &nbsp; &nbsp; &nbsp;
+    <a href="guide.html">Getting Started</a> &nbsp; &nbsp;
+    <a href="reference.html">API Reference</a> &nbsp; &nbsp;
+    <a href="download.html">Download</a> &nbsp; &nbsp;
     <a href="https://groups.google.com/group/tangle-talk">Discuss</a>
 </div>
 
